[package]
name = "batako"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true
opt-level = 1

[profile.release]
incremental = true

[dependencies]

vulkano = { version = "0.34", features = ["serde"] }
vulkano-shaders = "0.34"
winit = "0.28"

bytemuck = "1.14.0"
smallvec = "1.0"
cgmath = "0.18"
glium = "0.32.1"
png = "0.17"
rand = "0.8.4"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
winit_glium = { package = "winit", version = "0.27.1"}
tiled = "0.13.0"
egui_winit_vulkano = "0.27.0"
xml = "0.8.20"

[build-dependencies]
shaderc = "0.8.3"
